# EPet

./: .derived-data-log-01PKVO72  .gitignore  .gitmodules  CMake.gitignore  CMakeLists.txt  EngineSettings.h  ProjectDiagram.drawio
EPet-chnglhbdpyeyfsdquuapboijwggh/: info.plist
EPet.xcodeproj/: project.pbxproj
ModuleCache.noindex/: Session.modulevalidation
cmake_modules/: FindSDL2.cmake
engine/: FrameRate.cpp  JsonLoader.cpp  JsonLoader.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
engine/SDL/: SDLInputKeys.h  SDLRender.cpp  SDLRender.hpp  SDLWindow.cpp  SDLWindow.h
engine/ecs/: CommonComponents.cpp  CommonComponents.hpp  SaveLoadComponents.cpp  SaveLoadComponents.hpp
engine/input/: Input.cpp  Input.hpp  InputEvents.h
engine/resources/: Texture.h
engine/systems/: IRender.h
engine/window/: SDLWindow.cpp
hamster/save/: HamsterSave.cpp  HamsterSave.hpp
input/: Input.cpp  Input.hpp  InputEvents.h  InputKeys.h
resources/: game_settings.json
resources/animations/: idle.json
resources/scenes/: arkanoid_scene.json  playerSave.json  save.json  scene2.json  scene21.json
src/: FrameRate.cpp  FrameRate.hpp  Game.cpp  Game.hpp  IWindow.h  Input.cpp  Input.hpp  Pet.cpp  Pet.hpp  PetInfo.cpp  PetInfo.hpp  RequestList.cpp  RequestList.hpp  Schedule.cpp  Schedule.hpp  Subscription.cpp  Subscription.hpp  Timer.cpp  Timer.hpp  View.cpp  View.hpp  Window.cpp  Window.hpp  main.cpp  teslt.cpp  wellPlease.h
src/core/: Pet.cpp  Pet.hpp  (+8 more)
utils/: GetPath.hpp  Logging.hpp
window/: IWindow.h  SDLWindow.hpp
(+132 files in other folders)
